--- a/website/index.html
+++ b/website/index.html
@@ -48,7 +48,7 @@
             <li class="{{? it.selected === 'tbs' }}pure-menu-selected{{?}}">
                 <a class="hot-swapper" href="/tbs">
                     <i class="fa fa-table"></i>&nbsp;
-                    Tab Stats
+                    Global Stats
                 </a>
             </li>
             <li class="{{? it.selected === 'workers' }}pure-menu-selected{{?}}">
